--- a/app/views/spree/admin/shared/sub_menu/_mentor.html.erb
+++ b/app/views/spree/admin/shared/sub_menu/_mentor.html.erb
@@ -1,4 +1,4 @@
 <ul id="sidebar-mentor" class="border-top bg-white collapse nav nav-pills nav-stacked" data-hook="admin_returns_sub_tabs">
-  <%= tab :return_authorizations, url: spree.admin_return_authorizations_path, match_path: '/return_authorizations' if can?(:admin, Spree::ReturnAuthorization) %>
-  <%= tab :customer_returns, url: spree.admin_customer_returns_path, match_path: '/customer_returns' if can?(:admin, Spree::CustomerReturn) %>
+  <%= tab :mentors, url: spree.completions_admin_mentors_path, match_path: '/mentors/completion' %>
+  <%= tab :fine_tunes, url: spree.fine_tunes_lists_admin_mentors_path, match_path: '/mentors/fine-tunes-lists' %>
 </ul>
