--- a/app/views/spree/admin/shared/sub_menu/_mentor.html.erb
+++ b/app/views/spree/admin/shared/sub_menu/_mentor.html.erb
@@ -1,4 +1,4 @@
 <ul id="sidebar-mentor" class="border-top bg-white collapse nav nav-pills nav-stacked" data-hook="admin_returns_sub_tabs">
-  <%= tab :mentors, url: spree.completions_admin_mentors_path, match_path: '/mentors/completion' %>
+  <%= tab :chat, url: spree.chat_admin_mentors_path, match_path: '/mentors/chat' %>
   <%= tab :fine_tunes, url: spree.fine_tunes_lists_admin_mentors_path, match_path: '/mentors/fine-tunes-lists' %>
 </ul>
